build(backend): fix broken build